[tool.poetry]
name = "issac-lab-demo"
version = "0.1.0"
description = "Demo repo of Issac Lab + RL"
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.11"
isaacsim = "^4.2.0.2"
isaacsim-extscache-physics = "^4.2.0.2"
isaacsim-extscache-kit = "^4.2.0.2"
isaacsim-extscache-kit-sdk = "^4.2.0.2"
torch = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
